Fix background transparency and html dom tree and layer z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+h1,h2,h3 {
+  text-align: center;
+}
+
 body {
   margin: 0px;
   overflow: hidden;
@@ -19,11 +23,14 @@ body {
 #welcome-page-background{
   /*background-color: lightblue;
   */
-  width:1000px;
-  height:1000px;
+  position:absolute;
+  width:100%;
+  height:100%;
+  z-index:-999;
+  top:0px;
   margin:0 auto;
-  opacity: 0.4;
-  filter: alpha(opacity=40);
+  opacity: 0.33;
+  filter: alpha(opacity=33);
   background-size: 100%;
   background-image: url("../assets/welcome.jpg");*/
 
